cabal-version:      >=1.10
name:               crypton-x509-store
version:            1.8.0
license:            BSD3
license-file:       LICENSE
copyright:          Vincent Hanquez <vincent@snarc.org>
maintainer:         Kazu Yamamoto <kazu@iij.ad.jp>
author:             Vincent Hanquez <vincent@snarc.org>
stability:          experimental
homepage:           https://github.com/kazu-yamamoto/crypton-certificate
synopsis:           X.509 collection accessing and storing methods
description:
    X.509 collection accessing and storing methods for certificate, crl, exception list

category:           Data
build-type:         Simple
extra-source-files: ChangeLog.md

source-repository head
    type:     git
    location: https://github.com/kazu-yamamoto/crypton-certificate
    subdir:   x509-store

library
    exposed-modules:
        Data.X509.CertificateStore
        Data.X509.File
        Data.X509.Memory

    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=3 && <5,
        bytestring,
        containers,
        crypton,
        crypton-asn1-encoding >=0.10.0 && <0.11,
        crypton-asn1-types >=0.4.1 && <0.5,
        crypton-pem >=0.2.4 && <0.4,
        crypton-x509 >=1.8.0,
        directory,
        filepath,
        mtl

    if !os(windows)
        build-depends: unix

test-suite test-x509-store
    type:             exitcode-stdio-1.0
    main-is:          Tests.hs
    hs-source-dirs:   Tests
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=3 && <5,
        bytestring,
        tasty,
        tasty-hunit,
        crypton-x509,
        crypton-x509-store
