cabal-version:      >=1.10
name:               crypton-x509-util
version:            1.8.0
license:            BSD3
license-file:       LICENSE
copyright:          Vincent Hanquez <vincent@snar.org>
maintainer:         Kazu Yamamoto <kazu@iij.ad.jp>
author:             Vincent Hanquez <vincent@snarc.org>
stability:          experimental
homepage:           https://github.com/kazu-yamamoto/crypton-certificate
synopsis:           Utility for X509 certificate and chain
description:
    utility to parse, show, validate, sign and produce X509 certificates and chain.

category:           Data
build-type:         Simple
extra-source-files: ChangeLog.md

source-repository head
    type:     git
    location: https://github.com/kazu-yamamoto/crypton-certificate
    subdir:   x509-util

executable crypton-x509-util
    main-is:          Certificate.hs
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        base >=3 && <5,
        bytestring,
        crypton,
        crypton-asn1-encoding,
        crypton-asn1-types >=0.4.1 && <0.5,
        crypton-pem >=0.2.4 && <0.4,
        crypton-x509 >=1.8.0,
        crypton-x509-store >=1.8.0,
        crypton-x509-system >=1.8.0,
        crypton-x509-validation >=1.8.0,
        directory,
        memory,
        time-hourglass
