Name:                crypton-x509-validation
version:             1.6.14
Description:         X.509 Certificate and CRL validation. please see README
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Kazu Yamamoto <kazu@iij.ad.jp>
Synopsis:            X.509 Certificate and CRL validation
Build-Type:          Simple
Category:            Data
stability:           experimental
Homepage:            https://github.com/kazu-yamamoto/crypton-certificate
Cabal-Version:       >= 1.10

Library
  Default-Language:  Haskell2010
  Build-Depends:     base >= 3 && < 5
                   , bytestring
                   , memory
                   , mtl
                   , containers
                   , hourglass
                   , data-default
                   , pem >= 0.1
                   , asn1-types >= 0.3 && < 0.4
                   , asn1-encoding >= 0.9 && < 0.10
                   , crypton-x509 >= 1.7.5
                   , crypton-x509-store >= 1.6
                   , crypton >= 0.24
                   , iproute >= 1.2.2
                   , sbv >= 8.0
  Exposed-modules:   Data.X509.Validation
                     Data.X509.Validation.SBV
  Other-modules:     Data.X509.Validation.Signature
                     Data.X509.Validation.Fingerprint
                     Data.X509.Validation.Cache
                     Data.X509.Validation.Types
  ghc-options:       -Wall

Test-Suite test-x509-validation
  Default-Language:  Haskell2010
  type:              exitcode-stdio-1.0
  hs-source-dirs:    Tests
  Main-is:           Tests.hs
  Other-modules:     Certificate
                     SBVValidation
                     ComparisonTests
  Build-Depends:     base >= 3 && < 5
                   , bytestring
                   , memory
                   , data-default
                   , tasty
                   , tasty-hunit
                   , test-framework
                   , test-framework-hunit
                   , HUnit
                   , hourglass
                   , asn1-types
                   , asn1-encoding
                   , crypton-x509 >= 1.7.1
                   , crypton-x509-store
                   , crypton-x509-validation
                   , crypton
                   , sbv >= 8.0
  ghc-options:       -Wall

source-repository head
  type:     git
  location: https://github.com/kazu-yamamoto/crypton-certificate
  subdir:   x509-validation
